[package]
name = "vsock"
version = "0.5.0"
authors = ["fsyncd", "rust-vsock"]
description = "Virtio socket support for Rust"
repository = "https://github.com/rust-vsock/vsock-rs"
homepage = "https://github.com/rust-vsock/vsock-rs"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
exclude = ["test_fixture"]

[build]
target = "x86_64-unknown-linux-musl"

[dependencies]
libc = "0.2.155"
nix = { version = "0.29.0", features = ["ioctl", "socket"] }

[dev-dependencies]
rand = "0.8.3"
sha2 = ">=0.8.0"
